<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PlusActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        tools:context=".PlusActivity">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0" />

        <ImageButton
            android:id="@+id/outView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/Out"
            android:background="@null"
            android:scaleType="centerInside"
            android:src="@drawable/back"/>

        <!--  현재 화면(plus) 표시(지울 것)  -->
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Plus"
            android:layout_marginStart="20dp"
            android:textAlignment="viewStart"
            android:textSize="30sp"/>

        <!-- > option 이미지 버튼 들어가기 -->

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <ImageButton
            android:id="@+id/optionView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@null"
            android:contentDescription="@string/Option"
            android:scaleType="centerInside"
            android:src="@drawable/settings" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        tools:context=".PlusActivity"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/accountView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:contentDescription="@string/Account"
            android:src="@drawable/dambi"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:id="@+id/name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:id="@+id/email"
                android:textColor="@color/gray"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/category"
            android:textColor="@color/orange"
            android:textSize="20sp">

        </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="7dp">

        <EditText
            android:id="@+id/categoryName"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            android:hint="카테고리를 입력하세요"
            android:inputType="text"
            android:textSize="20sp"/>

        <Button
            android:layout_width="67dp"
            android:layout_height="40dp"
            android:background="@drawable/round_button"
            android:layout_gravity="center"
            android:padding="0dp"
            android:onClick="save"
            android:text="Save"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/categoryListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

</LinearLayout>