<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PriorityGraphActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        tools:context=".PlusActivity">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0" />

        <ImageButton
            android:id="@+id/outView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/Out"
            android:background="@null"
            android:scaleType="centerInside"
            android:src="@drawable/back"/>

        <!--  현재 화면(plus) 표시(지울 것)  -->
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/P_graph"
            android:layout_marginStart="20dp"
            android:textAlignment="viewStart"
            android:textColor="@color/orange"
            android:textSize="30sp"/>

        <!-- > option 이미지 버튼 들어가기 -->

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <ImageButton
            android:id="@+id/optionView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:contentDescription="@string/add"
            android:scaleType="centerInside"
            android:src="@drawable/add" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".PlusActivity"
        android:layout_gravity="center"
        android:layout_margin="50dp">


        <ImageView
            android:id="@+id/accountView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:contentDescription="@string/P_graph"
            android:src="@drawable/graphic"/>

    </LinearLayout>

    <ListView
        android:id="@+id/todoListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

</LinearLayout>